force-app/main/default/objects/redwing__Training_Activity__c/redwing__Training_Activity__c.object-meta.xml
<CustomObject>
    <label>Learning Activity</label>
    <nameField>
        <displayFormat>LA-{0000000}</displayFormat>
        <label>Learning Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>