force-app/main/default/objects/redwing__Training_Activity__c/fields/redwing__Achievement__c.field-meta.xml
<CustomField>
    <fullName>redwing__Achievement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Achievement</label>
    <referenceTo>redwing__Achievement__c</referenceTo>
    <relationshipLabel>Learning Activities</relationshipLabel>
    <relationshipName>Training_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>