force-app/main/default/objects/redwing__Training_Activity__c/fields/redwing__Chatter_Notifications_Enabled__c.field-meta.xml
<CustomField>
    <fullName>redwing__Chatter_Notifications_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Disable this option if you don&apos;t want users to receive chatter notifications.</inlineHelpText>
    <label>Chatter Notifications Enabled</label>
    <type>Checkbox</type>
</CustomField>