force-app/main/default/objects/redwing__Training_Activity__c/fields/redwing__Enable_all_external_accounts__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_all_external_accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enabling this checkbox will expose this Learning Activity to all external (Community/Portal) users</inlineHelpText>
    <label>Enable for all external users (Obsolete)</label>
    <type>Checkbox</type>
</CustomField>