force-app/main/default/objects/redwing__Training_Activity__c/fields/redwing__Learning__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Only published learning objects can be used as Learning Activities</errorMessage>
        <filterItems>
            <field>redwing__Learning__c.redwing__Is_Published_Formula__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>NOTE: Only published learning objects can be used as Learning Activities</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>Learning Activities</relationshipLabel>
    <relationshipName>Training_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>