force-app/main/default/objects/redwing__Training_Activity__c/fields/redwing__Learning_Description__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Description__c</fullName>
    <label>Learning Description</label>
    <type>TextArea</type>
</CustomField>