force-app/main/default/objects/redwing__Training_Activity__c/fields/redwing__Learning_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Name__c</fullName>
    <externalId>true</externalId>
    <label>Learning Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>