force-app/main/default/objects/redwing__Training_Activity__c/listViews/redwing__All.listView-meta.xml
<ListView>
    <fullName>redwing__All</fullName>
    <columns>NAME</columns>
    <columns>redwing__Learning__c</columns>
    <columns>redwing__Achievement__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>